--- a/index.html
+++ b/index.html
@@ -274,6 +274,6 @@
    </form>
    
 </section>
-<a href="#" class="logo"><img src="logo1.png" alt=""></a>
+<a href="#" class="logo"><img src="logo1.jpg" alt=""></a>
 </body>
 </html>
