--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
          <label class="label" for="d-discription">شرح مختصري از وضعيت و مشكلات: </label>
       </div>
       <div class="form-field col x-100 align-center">
-         <input class="submit-btn" type="submit" value="تایید">
+         <input class="submit-btn" type="submit" value="طراحی توسط علی پرتوی">
       </div>
    </form>
    
